--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                     </div>
                 </div>
 
+                <!-- Portfolio Item 3-->
                 <div class="col-md-6 col-lg-4 mb-5">
                     <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal3">
                         <div
@@ -103,6 +104,30 @@
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
                         <img class="img-fluid" src="assets/img/portfolio/koperasi.png" alt="..." />
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 4-->
+                <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
+                        <div
+                            class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white"><i
+                                    class="fas fa-plus fa-3x"></i></div>
+                        </div>
+                        <img class="img-fluid" src="assets/img/portfolio/apotek.png" alt="..." />
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 5-->
+                <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal5">
+                        <div
+                            class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white"><i
+                                    class="fas fa-plus fa-3x"></i></div>
+                        </div>
+                        <img class="img-fluid" src="assets/img/portfolio/komfapa.png" alt="..." />
                     </div>
                 </div>
             </div>
@@ -200,6 +225,7 @@
         <div class="container"><small>Copyright &copy; Agus Suartawan 2022</small></div>
     </div>
     <!-- Portfolio Modals-->
+
     <!-- Portfolio Modal 1-->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" aria-labelledby="portfolioModal1"
         aria-hidden="true">
@@ -248,46 +274,6 @@
         </div>
     </div>
 
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" aria-labelledby="portfolioModal3"
-        aria-hidden="true">
-        <div class="modal-dialog modal-xl">
-            <div class="modal-content">
-                <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal"
-                        aria-label="Close"></button></div>
-                <div class="modal-body text-center pb-5">
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <!-- Portfolio Modal - Title-->
-                                <h4 class="portfolio-modal-title text-secondary text-uppercase mb-0">Sistem Informasi
-                                    Koperasi Simpan Pinjam</h4>
-                                <!-- Icon Divider-->
-                                <div class="divider-custom">
-                                    <div class="divider-custom-line"></div>
-                                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                    <div class="divider-custom-line"></div>
-                                </div>
-                                <!-- Portfolio Modal - Image-->
-                                <img class="img-fluid rounded mb-5" src="assets/img/portfolio/koperasi.png" alt="..." />
-                                <!-- Portfolio Modal - Text-->
-                                <a href="http://marselina.herokuapp.com/" target="_blank">Demo
-                                    Program</a> <span>User
-                                    :
-                                    superadmin@gmail.com | Password : password</span>
-                                <p class="mb-4">Merupakan sistem informasi untuk pengelolaan data Koperasi meliputi
-                                    Setoran, Penarikan, Tabungan, Pinjaman, serta Angsuran + denda</p>
-                                <button class="btn btn-primary" data-bs-dismiss="modal">
-                                    <i class="fas fa-xmark fa-fw"></i>
-                                    Tutup
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Portfolio Modal 2-->
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" aria-labelledby="portfolioModal2"
         aria-hidden="true">
@@ -324,6 +310,133 @@
                                 <li>Auto cancel untuk pesanan jatuh tempo yang belum dibayarkan</li>
                                 <li>Auto jurnal untuk jurnal umum</li>
                                 <li>Laporan keuangan yang meliputi Jurnal Umum, Neraca Saldo, dan Buku Besar</li>
+                                <button class="btn btn-primary" data-bs-dismiss="modal">
+                                    <i class="fas fa-xmark fa-fw"></i>
+                                    Tutup
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 3-->
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" aria-labelledby="portfolioModal3"
+        aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal"
+                        aria-label="Close"></button></div>
+                <div class="modal-body text-center pb-5">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title-->
+                                <h4 class="portfolio-modal-title text-secondary text-uppercase mb-0">Sistem Informasi
+                                    Koperasi Simpan Pinjam</h4>
+                                <!-- Icon Divider-->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <!-- Portfolio Modal - Image-->
+                                <img class="img-fluid rounded mb-5" src="assets/img/portfolio/koperasi.png" alt="..." />
+                                <!-- Portfolio Modal - Text-->
+                                <a href="http://appkowo.my.id/" target="_blank">Demo
+                                    Program</a> <span>User
+                                    :
+                                    superadmin@gmail.com | Password : password</span>
+                                <p class="mb-4">Merupakan sistem informasi untuk pengelolaan data Koperasi meliputi
+                                    Setoran, Penarikan, Tabungan, Pinjaman, serta Angsuran + denda</p>
+                                <button class="btn btn-primary" data-bs-dismiss="modal">
+                                    <i class="fas fa-xmark fa-fw"></i>
+                                    Tutup
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 4-->
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" aria-labelledby="portfolioModal4"
+        aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal"
+                        aria-label="Close"></button></div>
+                <div class="modal-body text-center pb-5">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title-->
+                                <h4 class="portfolio-modal-title text-secondary text-uppercase mb-0">Sistem Pengelolaan
+                                    Obat</h4>
+                                <!-- Icon Divider-->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <!-- Portfolio Modal - Image-->
+                                <img class="img-fluid rounded mb-5" src="assets/img/portfolio/apotek.png" alt="..." />
+                                <!-- Portfolio Modal - Text-->
+                                <a href="http://kowoapp.my.id/" target="_blank">Demo
+                                    Program</a> <span>User
+                                    :
+                                    admin@gmail.com | Password : password</span>
+                                <p class="mb-4">Sistem ini saya kerjakan pada tahun 2022 untuk memenuhi permintaan
+                                    klien. Sistem ini memungkinkan pelanggan untuk melakukan pengelolaan obat secara
+                                    online. Sistem ini juga dilengkapi dengan dashboard untuk admin agar memudahkan
+                                    untuk pengelolaan data obat. Fitur-fitur yang tersedia antara lain:</p>
+                                <li>Login multiuser</li>
+                                <li>Pengelolaan obat masuk & keluar</li>
+                                <li>Pengelolaan stok & expired obat</li>
+                                <li>Laporan</li>
+                                <button class="btn btn-primary" data-bs-dismiss="modal">
+                                    <i class="fas fa-xmark fa-fw"></i>
+                                    Tutup
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 5-->
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" aria-labelledby="portfolioModal5"
+        aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal"
+                        aria-label="Close"></button></div>
+                <div class="modal-body text-center pb-5">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title-->
+                                <h4 class="portfolio-modal-title text-secondary text-uppercase mb-0">Information Landing
+                                    Page</h4>
+                                <!-- Icon Divider-->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <!-- Portfolio Modal - Image-->
+                                <img class="img-fluid rounded mb-5" src="assets/img/portfolio/komfapa.png" alt="..." />
+                                <!-- Portfolio Modal - Text-->
+                                <a href="http://komfapa.com/" target="_blank">Demo
+                                    Program</a>
+                                <p class="mb-4">Merupakan sistem informasi landing page untuk pemberitahuan, disertai
+                                    fitur registrasi dengan QR Code</p>
                                 <button class="btn btn-primary" data-bs-dismiss="modal">
                                     <i class="fas fa-xmark fa-fw"></i>
                                     Tutup
